crates/forge/tests/e2e/snapshots/backtrace/main__e2e__backtrace__backtrace_panic@2.13.1.snap
---
source: crates/forge/tests/e2e/backtrace.rs
expression: stdout
---
[IGNORE] backtrace_panic::Test::test_contract_panics_with_should_panic
[FAIL] backtrace_panic::Test::test_contract_panics

Failure data:
    0x417373657274206661696c6564 ('Assert failed')

error occurred in contract 'InnerContract'
stack backtrace:
   0: core::panic_with_const_felt252
       at [..]lib.cairo:364:5
   1: core::panic_with_const_felt252
       at [..]lib.cairo:364:5
   2: (inlined) core::Felt252PartialEq::eq
       at [..]lib.cairo:232:13
   3: (inlined) backtrace_panic::InnerContract::inner_call
       at [..]traits.cairo:441:10
   4: (inlined) backtrace_panic::InnerContract::InnerContract::inner
       at [..]lib.cairo:40:16
   5: backtrace_panic::InnerContract::__wrapper__InnerContract__inner
       at [..]lib.cairo:35:13

error occurred in contract 'OuterContract'
stack backtrace:
   0: backtrace_panic::OuterContract::__wrapper__OuterContract__outer
       at [..]lib.cairo:15:9

[FAIL] backtrace_panic::Test::test_fork_contract_panics

Failure data:
    0x417373657274206661696c6564 ('Assert failed')

error occurred in forked contract with class hash: 0x554cb276fb5eb0788344f5431b9a166e2f445d8a91c7aef79d8c77e7eede956

error occurred in contract 'OuterContract'
stack backtrace:
   0: backtrace_panic::OuterContract::__wrapper__OuterContract__outer
       at [..]lib.cairo:15:9


Failures:
    backtrace_panic::Test::test_contract_panics
    backtrace_panic::Test::test_fork_contract_panics
